output/facebook/rocksdb/594.txt
two issues:
1) correct command line to build for iOS is: declare -x TARGET_OS=IOS;make static_lib
2) error occurs in file util/file_util.cc at line:
      s = srcfile->Read(bytes_to_read, &slice, buffer);
the error is:
util/file_util.cc:43:25: error: implicit conversion loses integer precision: 'uint64_t' (aka 'unsigned long long') to 'size_t'
      (aka 'unsigned long') [-Werror,-Wshorten-64-to-32]
      s = srcfile->Read(bytes_to_read, &slice, buffer);
          ~~~~~~~       ^~~~~~~~~~~~~

library was build with latest Xcode version 6.3.1 (6D1002)

